fix split tmux always into current directory.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,8 +26,8 @@ set -g default-terminal "tmux-256color"
 bind C-d detach			# the same as d so you don't have to depress Ctrl
 
 
-bind-key v split-window -h
-bind-key s split-window -v
+bind-key v split-window -h -c "#{pane_current_path}"
+bind-key s split-window -v -c "#{pane_current_path}"
 set -g @resurrect-save 'S'
 set -g @resurrect-restore 'R'
 
