--- a/etc/i3status.conf
+++ b/etc/i3status.conf
@@ -11,11 +11,11 @@ general {
         interval = 1
 }
 
-# order += "ipv6"
+order += "ipv6"
 # order += "wireless _first_"
 order += "ethernet _first_"
 # order += "battery all"
-order += "disk /home"
+order += "disk /"
 order += "load"
 order += "memory"
 order += "tztime local"
@@ -43,20 +43,21 @@ battery all {
         format = "%status %percentage %remaining"
 }
 
-disk "/home" {
-        format = " disk: %avail "
+disk "/" {
+        format = "disk: %avail"
 }
 
 load {
-        format = " load: %1min "
+        format = "load: %1min"
 }
 
 memory {
-        format = " mem: %used / %available "
+        format = "ram: %used / %available"
         threshold_degraded = "1G"
         format_degraded = "MEMORY < %available"
 }
 
 tztime local {
+        format = "%Y-%m-%d %H:%M:%S"
         format = " %Y-%m-%d  %I:%M:%S %p "
 }
